# ramsey

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  Untitled.ipynb  mkdocs.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml  coverage.yaml  docs.yaml  examples.yaml  notebooks.yaml  release.yaml
docs/: .gitignore  Makefile  api.rst  conf.py  demo.py  examples.md  examples.rst  getting_started.rst  index.md  index.rst  news.md  news.rst  ramsey.attention.rst  ramsey.contrib.rst  ramsey.data.md  ramsey.data.rst  ramsey.experimental.md  ramsey.experimental.rst  ramsey.family.md  ramsey.family.rst  ramsey.kernels.rst  ramsey.md  ramsey.nn.md  ramsey.nn.rst  ramsey.rst  ramsey.train.rst  references.bib  requirements.txt
docs/_pygments/: style.py
docs/_static/: theme.css
docs/notebooks/: bayesian_inference_vs_ml_training.ipynb  bayesian_modelling.ipynb  forecasting.ipynb  inference_with_flax_and_numpyro.ipynb  neural_process.ipynb  neural_process.py  neural_processes.ipynb  on_inference.ipynb
docs/source/: api.rst  conf.py  index.rst
docs/source/notebooks/: forecasting.ipynb  m4_time_series_evaluation.ipynb  neural_process.ipynb  timeseries_forecasting.ipynb
examples/: attentive_neural_process.py  bayesian_neural_network.py  gaussian_process.py  gaussian_process_api.py  gaussian_process_hl_api.py  gaussian_process_hp.py  gaussian_process_ll_api.py  gaussian_process_low_level.py  linear_model.py  negative_binomial_linear_model.py  neural_processes.py  recurrent_attentive_neural_process.py  sequential_training.py  sparse_gaussian_process.py
examples/experimental/: bayesian_neural_network.py  gaussian_process.py  recurrent_attentive_neural_process.py  sparse_gaussian_process.py
examples/gaussian_process/: data.py  gaussian_process.py
pax/: __init__.py  attention.py  covariance_functions.py  data.py  family.py  models.py  neural_process.py  train.py
pax/_src/: datasets.py  family.py  train.py
pax/_src/gaussian_process/covariance/: stationary.py
pax/_src/neural_process/: attention.py  attentive_neural_process.py  doubly_attentive_neural_process.py  neural_process.py  self_attentive_neural_process.py
pax/_src/neural_process/attention/: attention.py  dotproduct_attention.py  laplace_attention.py  multihead_attention.py
pax/gaussian_process/covariance/: base.py  stationary.py
pax/training/: train.py
ramsey/: __init__.py  attention.py  covariance_functions.py  data.py  experimental.py  family.py  kernels.py  models.py  nn.py  train.py
ramsey/_src/: conftest.py  datasets.py  family.py  test_networks.py
ramsey/_src/attention/: attention.py  dotproduct_attention.py  multihead_attention.py
ramsey/_src/contrib/: train_model.py
ramsey/_src/contrib/bayesian_neural_network/: BayesianLayer.py  BayesianLinear.py  BayesianNeuralNetwork.py  bayesian_linear.py  bayesian_neural_network.py
ramsey/_src/contrib/bijectors/: inverse_autoregressive_flow.py  permutation.py  util.py
ramsey/_src/contrib/gaussian_process/: gaussian_process.py  sparse_gaussian_process.py  train_gaussian_process.py
ramsey/_src/contrib/timeseries/: deep_ar.py  deep_latent_rnn.py  recurrent_attentive_neural_process.py  train_recurrent_attentive_neural_process.py
ramsey/_src/data/: data.py  dataset_m4.py
ramsey/_src/experimental/bayesian_neural_network/: bayesian_linear.py  bayesian_neural_network.py  train_bnn.py
ramsey/_src/experimental/distributions/: arma.py  autoregressive.py
ramsey/_src/experimental/gaussian_process/: gaussian_process.py  sparse_gaussian_process.py  train_gaussian_process.py
ramsey/_src/experimental/kernel/: base.py  distance.py  non_stationary.py  stationary.py
ramsey/_src/experimental/neural_process/: embedding_recurrent_neural_process.py  generalized_neural_process.py  recurrent_doubly_attentive_neural_process.py  recurrent_encoding_recurrent_attentive_neural_process.py  recurrent_encoding_recurrent_neural_process.py  test_train_neural_process.py  train_neural_process.py  train_sequential_neural_process.py
ramsey/_src/gaussian_process/: data.py  gaussian_process.py  gaussian_process_wrapper.py  kernel.py  sparse_gaussian_process.py  train_gaussian_process.py
ramsey/_src/neural_process/: attentive_neural_process.py  doubly_attentive_neural_process.py  neural_process.py  neural_process_test.py  test_train_neural_process.py  train_neural_process.py  train_neural_process_test.py
ramsey/_src/nn/: MLP.py
ramsey/contrib/: __init__.py  models.py  train.py
ramsey/contrib/train/: __init__.py
ramsey/experimental/: __init__.py  train.py
ramsey/models/: high_level.py  low_level.py
tests/: adasd.py  conftest.py  test_networks.py  test_training.py
(+22 files in other folders)
