[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ramsey"
description = "Probabilistic deep learning using JAX"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = { file = "LICENCE" }
keywords=[
  "Bayes",
  "jax",
  "probabilistic deep learning",
  "probabilistic models",
  "neural processes",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "chex>=0.1.85",
  "flax>=0.10.2",
  "jax>=0.5.0",
  "jaxlib>=0.5.0",
  "optax>=0.1.7",
  "pandas>=2.1.3",
  "rmsyutls",
  "tqdm",
  "numpyro>=0.16.1",
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["matplotlib"]

[project.urls]
Documentation = "https://ramsey.rtfd.io"
Homepage = "https://github.com/ramsey-devs/ramsey"

[tool.setuptools]
packages = ["ramsey"]

[tool.setuptools.dynamic]
version = {attr = "ramsey.__init__.__version__"}

[tool.bandit]
skips = ["B101", "B310"]

[tool.mypy]
show_error_codes = true
no_implicit_optional = true

[tool.pytest]
addopts = "-v --doctest-modules --cov=./ramsey --cov-report=xml"

[tool.ruff]
indent-width = 2
line-length = 80
exclude = ["*_test.py", "docs/**"]

[tool.ruff.lint]
select = ["ANN", "D", "E", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore= ["S101", "ANN1", "ANN2", "ANN0", "E111", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention= 'google'

[tool.uv]
upgrade-package = ["jax", "jaxlib", "flax"]
dev-dependencies = [
    "pre-commit",
    "ruff",
    "matplotlib",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
]
